# RAG-Course

./: pyproject.toml  requirements.txt
data/excel/: ARTLinelist_Report_2025-12-24_13_18_07.xlsx
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdf_loader.ipynb
