[project]
name = "rag-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-text-splitters>=1.1.0",
    "networkx>=3.6.1",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "tokenizers>=0.22.1",
    "transformers>=4.57.3",
    "unstructured[all]>=0.18.21",
]
